--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -82,79 +82,87 @@ Linki i ciekawe znaleziska:
 
 **Łukasz Kałużny**: Raczej pytanie tak, tylko czy teraz my mówimy o Web Assembly jako backend runtime'ie? Czy mówimy o Web Assembly pierwotnie jako...
 
-**Szymon Warda**: Backend runtime'ie. Bo to było w kontekście właśnie, że Web Assembly jest przyszłością, w kontekście kontenerów. Że kontrolery stały się the new norm, normalnością obecnie, z czym się bardzo mocno nie zgadzam. Ostatnie parę dni pokazało.
+**Szymon Warda**: Backend runtime'ie. Bo to było w kontekście właśnie, że Web Assembly jest przyszłością, w kontekście kontenerów. Że kontenery stały się the new norm, normalnością obecnie, z czym się bardzo mocno nie zgadzam. Ostatnie parę dni pokazało.
 
 **Łukasz Kałużny**: Cała zabawa... New normal jest dla ludzi, którzy bootstrapują projekty.
 
-**Szymon Warda**: Tak. Ale też nie do końca, właśnie. Bo teraz dochodzimy do... Spójrzmy sobie na raport to nie fajne wyniki od 18 roku 2018 roku są publikowane na GitHubie, czyli raz wydane to zabrać się za całą analizę, zrobić jakby to chciał, ma potrzebę, więc fajnie jest. To, że faktycznie są transparentne. Bardzo mocno to mi się podoba, bo rzadko kiedy te ankiety są na tyle transparentne, żeby potem móc wejść w cyferki i zobaczyć jakie wnioski wyciągnęli. Często są takie wartości do 100.000 respondentów i mamy magiczne wartości. Potem na to patrzymy i mówimy trochę mi to śmierdzi, ale to jest pytanie, do którego dążę odnośnie życia w bańce, bo ostatnio mam taki przypadek I pytanie do Ciebie. Od razu uprzedzam generalnie, że to jest świeżynka. Powiedzmy sobie czy jest sens? Wchodzić w które serwisową. Slash mikroserwisach Wiemy, że taką miksowanie lubimy. Jeżeli Twoim suplementem będzie jest windowsowy albo Linux, ale nie orkiestra TOR, czyli to nie będzie nigdy skanował.
+**Szymon Warda**: Tak. Ale też nie do końca, właśnie. Bo teraz dochodzimy do... Spójrzmy sobie na raport, to jest takie fajne - wyniki od '18 roku... 2018 roku są publikowane na GitHubie, czyli można sobie te dane zebrać i sobie całą analizę, zrobić, jakby ktoś chciał, miał potrzebę. Więc fajne jest to, że faktycznie są transparentni bardzo mocno, to mi się podoba, bo rzadko kiedy te ankiety są na tyle transparentne, żeby potem móc wejść w cyferki i zobaczyć jakie wnioski wyciągnęli. Często są takie wartości że ooo, 100.000 responderów i mamy magiczne wartości. Potem na to patrzymy i mówimy eee... Trochę mi to śmierdzi. Ale teraz pytanie, do którego dążę - bo odnośnie życia w bańce... Bo ostatnio mam taki przypadek - I pytanie do Ciebie. Od razu uprzedzam generalnie, że to jest świeżynka. Powiedzmy sobie. Czy jest sens wchodzić w architekturę serwisową/mikroserwisową; Wiemy, że tego mikro-słowa nie lubimy. Jeżeli Twoim deploymentem będzie IaaS windowsowy albo Linux, ale nie orchestrator, czyli to będzie onprem, który się nie będzie nigdy skalował.
 
-**Łukasz Kałużny**: To wiesz co? Dla mnie odpowiedź jest bardzo prosta i zarazem bardzo trudna. To pytanie czy kontekst pozwala? Bo jak mówisz a jest albo zobaczmy sobie, że nadaje się funkcjonowały. A jak jest dla rozwiązania? To jest serwer aplikacyjny na Windowsie klasycznie do neta. Jak ktoś był masochistą, można było też inne technologie dostępne na tym odpalić. Ale jeżeli teraz sobie popatrzysz, odrzućmy słowo serwisowa, popatrzmy na podział aplikacji. Bo czasem może się okazać, że. Jakieś rozdzielenie modułów ma pi razy drzwi sens. Teraz nie mówię o sposobie pisania modułów.
+**Łukasz Kałużny**: To wiesz co? Dla mnie odpowiedź jest bardzo prosta i zarazem bardzo trudna. To pytanie: czy boundary context pozwala nam to... Bo jak mówisz IaaSa... zobaczmy sobie, że na IaaSie funkcjonowały sobie... IaaS dla rozwiązania to jest serwer aplikacyjny na Windowsie klasycznie do dotneta. Jak ktoś był masochistą, można było też inne technologie na tym odpalić. Ale jeżeli teraz sobie popatrzysz, odrzućmy słowo serwisowa, popatrzmy na podział aplikacji. Bo czasem może Ci się okazać, że jakieś rozdzielenie modułów ma pi razy drzwi sens. Teraz nie mówię o sposobie pisania modułów.
 
-**Szymon Warda**: Bo to dwa moduły. Moduł to są grupy kodu, które są wystawiane w ramach jednego procesu.
+**Szymon Warda**: Moduł to są grupy kodu, które są hostowane w ramach jednego procesu, rozumiesz.
 
-**Łukasz Kałużny**: Tak, tak, dokładnie. Bo tak czy siak jest monolit. I teraz jest pytanie czy to będzie monolit zrobiony powiedzmy zgodnie ze sztuką, czy jak to się ładnie nazywa modularny monolit, czy zrobisz sobie po prostu ze względu na wygodę i niechęć do robienia rzeczy, uzupełnienia rzeczy pod spodem i robienia tej modernizacji walniesz sobie n grup procesów, które sobie wykorzystujesz i będą po prostu rozproszonym monolitem na jednej maszynie. Na koniec dnia nie jest jakieś straszne, jeżeli popatrzymy na pewne rzeczy, które się robi tak zupełnie, zupełnie realnie. Jeżeli nie dopuścimy do dużego spaghetti, to to nawet potrafi być utrzymywane.
+**Łukasz Kałużny**: Tak, tak, dokładnie. Bo tak czy siak wyklepiesz monolit. I teraz jest pytanie czy to będzie monolit zrobiony powiedzmy zgodnie ze sztuką, czy jak to się ładnie nazywa modularny monolit, czy zrobisz sobie po prostu ze względu na wygodę i niechęć do robienia rzeczy, uwspólnienia rzeczy pod spodem i robienia tej modularyzacji, walniesz sobie n grup procesów, które sobie wyhostujesz i będą po prostu rozproszonym monolitem na jednej maszynie. Co na koniec dnia nie jest jakieś straszne, jeżeli popatrzymy na pewne rzeczy, które się robi tak zupełnie, zupełnie realnie. Jeżeli nie dopuścimy do dużego spaghetti, to to nawet potrafi być utrzymywalne.
 
-**Szymon Warda**: Wszystko zależy od developerów i energii, które w to włożyć. De facto.
+**Szymon Warda**: Wszystko zależy od developerów i energii, które w to włożysz. De facto.
 
-**Łukasz Kałużny**: Tak. Ale czy mówienie o architekturze serwisowej tak jak mówisz w takim przypadku, że wiesz, że będzie tak trafi nie ma sensu.
+**Łukasz Kałużny**: Tak. Ale czy mówienie o architekturze serwisowej tak jak mówisz w takim przypadku, że wiesz, że będzie tak... Nie ma sensu.
 
-**Szymon Warda**: Chociaż tak powiesz. Ja na to inaczej patrzę, bo teraz to tak. Jeżeli mamy nową premię, to tak, te plusy niezależne skalowania totalnie nam wypadają z tej układanki. To co mi się podoba w tym czemu dalej mimo wszystko bym twierdził, że to ma sens. Jest jeden tekst, który poruszyłeś. Ta separacja de facto powoduje, że jest taka rzecz, która jest po to, żeby te kupki, czyli ten pierdolnik, który mamy w kodzie de facto podzielić na mniejsze części tak naprawdę. I tutaj ta wartość jest też, że nam się to nie rozleje, ten cały pierdolnik po tych wszystkich serwisach naraz i nie wyjdziemy z takim obcym, że nie mam pojęcia, gdzie to w ogóle jest, jak to trzymać i jak z tym działać. Więc na poziomie budżetowanie na poziomie skalowania, na poziomie utrzymania kosztów utrzymania tego kodu to dla mnie to faktycznie miałoby sens. Ale wchodzimy w ten element, że instalacji teraz tego, jeżeli odejdziemy od Kubernetes owego to jest straszny ból wiadomo gdzie.
+**Szymon Warda**: Podejrzewałem, że tak powiesz. Ja na to inaczej patrzę, bo de facto to tak. Jeżeli mamy na onpremie, to tak, te plusy niezależnie od skalowania totalnie nam wypadają z tej układanki. To co mi się podoba w tym czemu dalej mimo wszystko bym twierdził, że to ma sens. Jest jeden case, który trochę ruszyłeś. Ta separacja de facto powoduje, że... raczej moja opinia jest taka, że architektura jest po to, żeby te kupki, czyli ten pierdolnik, który mamy w kodzie de facto podzielić na mniejsze części tak naprawdę. I tutaj ta wartość jest de facto, że nam się to nie rozleje, ten cały pierdolnik po tych wszystkich serwisach naraz i nie wyjdziemy z taką opcją, że nie mam pojęcia, gdzie to w ogóle jest, jak to trzymać i jak z tym działać. Więc na poziomie budżetowania; na poziomie skalowania, na poziomie utrzymania kosztów utrzymania tego kodu to dla mnie to faktycznie miałoby sens. Ale wchodzimy w ten element, że instalacja teraz tego, jeżeli odejdziemy od świata Kubernetesowego to jest straszny ból wiadomo gdzie.
 
-**Łukasz Kałużny**: Tak?
+**Łukasz Kałużny**: Tak.
 
-**Szymon Warda**: I dalej jest pole sytuacji, bo to jest dyskusja na bazie przypadku z życia realnego i to nie jednego de facto, które po prostu mówią, że będziemy trochę stawiali Windowsie. Nie ma innej opcji tak naprawdę. I nagle oni mówią, że generalnie no sorry, 8 serwisów + ileś tam baz danych plus ileś tam czegoś innych rzeczy to jest nagle spory problem dla nich tak naprawdę. A drugi element ryzyko regresji. Jasne podzielenie tego zestawu kontekstów, że jak ktoś w jednym miejscu się wywali, to tam potencjalnie się nie rozleje na całą resztę. I łatwiej jest po prostu w takie systemy trochę wchodzić w mniejsze części. Więc mimo wszytko wierzę, że to dalej ma sens. Ale ten test to jest taka dużo mniejsza tak naprawdę. W sensie jest plus. Ten plus nie jest taki ogromny jak nie możemy z rękawa rzucać argumentami o mikroserwisach czy CNCF'ie są dużo lepsze, bo nie, więc tak często żyjemy w tak małej bańce de facto, że mamy Kubernetes i śmigamy. Świat jest okrutny.
+**Szymon Warda**: I dalej jest sporo instytucji, bo to jest dyskusja na bazie przypadku z życia realnego i to nie jednego de facto, które po prostu mówią, że będziemy to hostowali na Windowsie. Nie ma innej opcji tak naprawdę. I nagle oni - te instytucje mówią, że generalnie no sorry, 8 serwisów + ileś tam baz danych plus ileś tam czegoś innych rzeczy to jest nagle spory problem dla nich tak naprawdę. A drugi jeszcze element, ryzyko regresji. Jasne podzielenie tego systemu kontekstów, że jak ktoś w jednym miejscu się wywali, to tam potencjalnie się nie rozleje na całą resztę. I łatwiej jest po prostu w takie systemy trochę wchodzić w mniejsze części. Więc mimo wszystko uważam, że to dalej ma sens. Ale ta systemowość jest taka dużo mniejsza tak naprawdę. W sensie jest plus. Ten plus nie jest taki ogromny jak... Nie możemy z rękawa rzucać argumentami o mikroserwisy czy same serwisy są dużo lepsze, bo... No nie, więc tak - wg. mnie często żyjemy w takiej małej bańce de facto, że ooo, mamy Kubernetesy i wszyscy sobie śmigamy. Świat jest trochę bardziej okrutny.
 
-**Łukasz Kałużny**: Jest coraz więcej, to powiedzmy sobie idzie do przodu. Tak to mocno i to wiesz. Jeżeli cofniesz się teraz, trzy lata temu, jeżeli cofniesz się 3 lata temu czasy przypadkowi, a porównasz to co jest teraz, to dostępność technologii jest ogromna. Kompetencje nadal są gdzie były?
+**Łukasz Kałużny**: Słuchaj, jest coraz więcej, to powiedzmy sobie... Idzie do przodu.
 
-**Szymon Warda**: Tak, wydaje mi się, że to kwestia będzie tak naprawdę ten boom, przeskok nastąpi w sytuacji. Generalnie jak w końcu instytucje będą mogły wchodzić w jakąś chmurę. No dobra, to przejdźmy płynnie.
+**Szymon Warda**: Tak.
 
-**Łukasz Kałużny**: Jak rzuciłeś bardzo płynnie chyba link, który mi się rzucił. No właśnie jest takie fajne pytanie czy będzie ucieczka z placu czy nie.
+**Łukasz Kałużny**: I to mocno i to wiesz... Jeżeli cofniesz się, rzuć teraz, trzy lata temu. Jeżeli cofniesz się 3 lata temu - czasy przedcovidowe, a porównasz to co jest teraz, to dostępność technologii jest ogromna. Kompetencje nadal są gdzie były.
+
+**Szymon Warda**: Tak, wydaje mi się, że to kwestia będzie tak naprawdę, ten taki boom, przeskok nastąpi w sytuacji, generalnie, jak w końcu instytucje będą mogły wchodzić w jakąś chmurę. 
+
+**Łukasz Kałużny**: No dobra, to przejdźmy płynnie. Jak rzuciłeś bardzo płynnie - do... Linku, który mi się rzucił. No właśnie jest takie fajne pytanie czy będzie ucieczka z cloudu czy nie.
 
 **Szymon Warda**: Pojawiają się takie szmery.
 
-**Łukasz Kałużny**: Szmery i na kanwie czegoś pokazało. Ostatnio Microsoft parę rzeczy tam zmieniał w pressingu i dolarowy pressing się nie zmienił. Walutowy został, że tak powiem, porównany inflacją np. że rachunki gdzieś tam przy euro duńskich koronach poszły 11%, szwedzka 15 funty 9%, rachunki cloud w zależności od umowy, bo to jest bardziej skomplikowane i rzecz, która jest tutaj właśnie całością, to jest jedna rzecz. Nie mieszkasz w Stanach, to jest ta niepewność rachunków innych rzeczy, ale kwestia.
+**Łukasz Kałużny**: Szmery i na kanwie czegoś to pokazało. Ostatnio Microsoft parę rzeczy tam zmieniał w pricingu i dolarowy pricing się nie zmienił. Walutowy został, że tak powiem, dorównany inflacją np. że rachunki gdzieś tam przy euro, duńskich koronach poszły 11%, szwedzka 15, funty 9%, rachunki za ten cloud w zależności od umowy, bo to jest bardziej skomplikowane - i rzecz, która jest tutaj właśnie całością, to jest jedna, że... Nie mieszkasz w Stanach, to jest ta niepewność rachunków i innych rzeczy.
 
-**Szymon Warda**: Kluczowa ryzyko to firmy umieją ogarnąć, nie oszukujmy się, po prostu odpowiednio.
+**Szymon Warda**: Kwestia walutowa - ryzyko. To firmy umieją ogarnąć, nie oszukujmy się, po prostu odpowiednio...
 
-**Łukasz Kałużny**: Są na to. I druga rzecz, która jest ciekawsza, to że tak jak mówimy, że Kubernetes jest skomplikowane, pójdźmy zrobić Enterprisowej chmurę. To dopiero zaczyna się robić skomplikowanie.
+**Łukasz Kałużny**: Są na to... I druga rzecz, która jest ciekawsza, to że tak jak mówimy, że Kubernetes jest skomplikowany, pójdźmy zrobić Enterprisową chmurę. To dopiero zaczyna się robić skomplikowanie.
 
-**Szymon Warda**: No właśnie, bo to jest element, który. Czy będzie ucieczka w chmurę? Bo były bardzo.
+**Szymon Warda**: No właśnie, znaczy to jest ten element, który... Czy będzie ucieczka z chmury? Bo były artykuły odnośnie tego.
 
-**Łukasz Kałużny**: I ciągle się pojawiają. To jest tak jak rok Linuksa na desktopie. Zresztą autor tego artykułu to też wrzucił wstępniak zaczął od tego, czy będzie to rok tak jak właśnie Linuksem desktopie.
+**Łukasz Kałużny**: I ciągle się pojawiają. To jest tak jak rok Linuksa na desktopie. Zresztą autor tego artykułu to też wrzucił w ogóle; wstępniak zaczął od tego, czy będzie to rok tak jak właśnie Linuksa na desktopie.
 
-**Szymon Warda**: Ale zobacz, czy uciekając chmurą musielibyśmy podarować sobie wiele rzeczy. Store w chmurze jest tańszy. Jest to i to jest rzędy wielkości tańsze. Po prostu możliwość budowania, zbudowania osobnego Disaster Recovery Center czy ogromny koszt. Mówimy o latach, żeby to zrobić, bo.
+**Szymon Warda**: Ale zobacz, czy w tym momencie, bo... Uciekając z chmury musielibyśmy podarować sobie wiele rzeczy. Storage w chmurze jest tańszy.
 
-**Łukasz Kałużny**: Raczej tak ceny w ogóle spadają, że tak powiem. Fakt, może nie, ale ceny tak, ceny tak.
+**Łukasz Kałużny**: Jest.
 
-**Szymon Warda**: Musielibyśmy teraz te wszystkie. Nauczyliśmy się, że nagle, żeby skalować się w górę, w dół. Nagle mówimy okej, nie możemy tego zrobić. Cały skalowanie monitory zobrazuje wszystko. To jest nierealne. Nie odejdziemy od tego, bo zbyt dużo rzeczy się nauczyliśmy wykorzystywać. Projekty, które zaczęły to wykorzystywać. De facto wykorzystują to możliwości chmury. Nie wrócą, bo faktycznie to ma wartość swoją wartość dużą. Całe security wokół tego obserwowano. Dostępy. Po prostu teraz wrócić do zarządzania firmware albo HRD.
+**Szymon Warda**: I to jest rzędy wielkości tańsze. Po prostu. Możliwość budowania, wybudowanie osobnego Disaster Recovery Center to jest ogromny koszt. Tu mówimy o latach, żeby to zrobić w ogóle.
 
-**Łukasz Kałużny**: No nie, nie. Ale to ciągle istnieje.
+**Łukasz Kałużny**: Raczej tak, ceny w ogóle spadają, że tak powiem. Data w chmurze nie, ale ceny tak, ceny tak.
 
-**Szymon Warda**: Istnieje, bo musi istnieć. Bo faktycznie niektóre zachowania odnośnie tego twórcy Ruby on Rails faktycznie mają sens, żeby oni wrócili tak naprawdę, bo mają system, który doskonale znają. Ale i jak organizacji nie zaatakuje tych korporacji powie ok, to teraz znajdziemy tych ludzi z powrotem, jak ich przez wiele lat uczyliśmy, że on nie istnieje, to się uczcie. Teraz chmury z powrotem zatrudnimy, gdzie mi płacili, kupimy sprzęt, kupimy miejsce tak dalej, to tak dalej i postawimy to wszystko samodzielnie jest nierealne.
+**Szymon Warda**: Musielibyśmy teraz high-availability i te wszystkie rzeczy których... Nauczyliśmy się, że nagle możemy skalować się w górę, w dół. Nagle mówimy okej, nie możemy tego zrobić. Cały skalowanie monitoring i wszystko. To jest nierealne. Nie odejdziemy od tego, bo zbyt dużo rzeczy się nauczyliśmy wykorzystywać. Inaczej, organizacje, które zaczęły to wykorzystywać. De facto wykorzystują te możliwości chmury. Nie wrócą, bo to faktycznie... To ma wartość swoją - i to wartość dużą. Całe security wokół tego, obserwowalność. Dostępy. Po prostu teraz wrócić do zarządzania VMWarem? Albo HyperV?
 
-**Łukasz Kałużny**: Jest to raczej nierealne. A teraz zobaczmy sobie z drugiego punktu widzenia, który jest ciekawy i to mówi, że de facto to już nie pierwszy raz, bo to było też przecież ten artykuł, który był z hakiem, czyli zobacz, że te workflow one aż tak bardzo nie rosną i się nie zmieniają. I okazuje się, że jeżeli posiadasz już tradycyjne datacenter, to może się okazać to tańsze do hostowania, jeżeli wyrzucisz cały model.
+**Łukasz Kałużny**: No nie, nie. Ale to przecież ciągle istnieje.
 
-**Szymon Warda**: Zgadza się? Tak, jeżeli generalnie posiadasz, jeżeli mówisz ok konferencje po prostu jeżeli robisz taki hosting typowo na ramkach to jest to będzie tańsze i będzie łatwiejsze i sporej części organizacji. Fakt, to.
+**Szymon Warda**: Istnieje, bo musi istnieć. Bo faktycznie niektóre zastosowania odnośnie tego... system twórcy Ruby on Rails. Oni faktycznie mają sens, żeby oni wrócili tak naprawdę, bo mają system, który doskonale znają. Ale ile tych organizacji - nie startupów, korporacji: powie ok, to teraz znajdziemy tych ludzi z powrotem, jak ich przez wiele lat uczyliśmy, że nie nie nie, onprem nie istnieje, to się uczcie teraz chmury - wezmą tu ludzi z powrotem, zatrudnimy, będziemy im płacili, kupimy sprzęt, kupimy miejsca i tak dalej, i tak dalej i postawimy to wszystko samodzielnie. Nierealne!
+
+**Łukasz Kałużny**: Wiesz co? Raczej ty mówisz, że nierealne. A teraz zobaczmy sobie z drugiego punktu widzenia, który jest ciekawy i to mówi, że de facto to jest już nie pierwszy raz, bo to było też przecież ten artykuł, który był z haycom, czyli zobacz, że te workloady, one aż tak bardzo nie rosną i się nie zmieniają. I okazuje się, że jeżeli posiadasz już tradycyjny datacenter, to może się okazać to tańsze do hostowania, jeżeli wyrzucisz cały fancy model.
+
+**Szymon Warda**: Zgadza się? Tak, jeżeli generalnie posiadasz, jeżeli mówisz ok, kontenery... nah - po prostu jeżeli robisz taki hosting typowo na VMkach, to jest to... Będzie tańsze i będzie łatwiejsze i sporej części organizacji. Fakt, to wystarczy.
 
 **Łukasz Kałużny**: Wystarczy.
 
-**Szymon Warda**: Wystarczy, wystarcza tylko. Pytanie podstawowe. Super, fajnie, tylko realia są teraz takie mamy ludzi cały development i ludzie chcą przychodzić. I jak masz problem zatrudnienia za ileś tam lat jak powiedzą że nie wychodzimy do kasyna tam powiedzmy do frameworku który chyba.
+**Szymon Warda**: Wystarczy, wystarczy, tylko teraz takie pytanie podstawowe. Super, fajnie, tylko realia są teraz takie: mamy ludzi cały development to jest CV-Driven Development i ludzie chcą przychodzić. I jak będą mieli problem zatrudnienia za ileś tam lat jak powiedzą że nie, my chodzimy na tam... Powiedzmy... Dotnet frameworku który nie jest wspierany.
 
-**Łukasz Kałużny**: Dla Ciebie jest to może zostawmy kod o braku pensji technologii bo tam akurat możesz chmurę. To wymusza aby ładowanie co jest przyjemniejsze. Ale patrząc się na to czy ten CV Driven Development wiesz dobrze jak kołowe technologie w Fortune 500 istnieją i w jaki sposób się zatrudnia ludzi do tych projektów i zarysuje.
+**Łukasz Kałużny**: Raczej wiesz, to może zostawmy kod o braku fancy technologii, bo tam akurat możesz się upgradeować... Chmura na tobie wymusza to upgradowanie, co jest przyjemniejsze. Ale patrząc się na to czy ten CV Driven Development wiesz dobrze jak kałowe technologie w takich Fortune 500 istnieją i w jaki sposób się zatrudnia ludzi do tych projektów i sourcuje.
 
-**Szymon Warda**: Zamiast płacić chmurze płaci się często ludziom albo generalnie dostaje się dużą grupę juniorów.
+**Szymon Warda**: Tak, zamiast płacić chmurze, płaci się często ludziom albo generalnie dostaje się dużą grupę juniorów.
 
-**Łukasz Kałużny**: Więc tutaj jest mówienie, że nie zatrudnienia, ale jest to temat. Ja mówię to jest gdzieś tam mój zakład, jest to może nawet nie. Powiedzmy, że wracanie z projektami, ale nie odpalanie nowych projektów w chmurze to byłoby lepsze określenie. Tak że to jest lepsze, bo powrót jest za ciężki, ale za to nie odpalanie nowych projektów to jest ciekawsze stwierdzenie.
+**Łukasz Kałużny**: Więc tutaj wiesz... Mówienie, że nie zatrudniesz, nie, ale jest to hm... Temat; ja mówię to jest gdzieś tam mój zakład, znaczy wiesz co, nie powiedzmy, że wracanie z projektami, ale nie odpalanie nowych projektów w chmurze to byłoby lepsze określenie. Tak że to jest lepsze, bo powrót jest za ciężki, ale za to nie odpalanie nowych projektów to jest ciekawsze stwierdzenie.
 
-**Szymon Warda**: Z tym bym się zgodził. Tak, wydaje mi się, że wakacje przejdą full na na chmurę. Dużo będzie chciało utrzymać hybrydę. I to będzie.
+**Szymon Warda**: Z tym bym się zgodził. Tak, wydaje mi się, że czy organizacje przejdą full na na chmurę? Dużo będzie chciało przynajmniej utrzymać hybrydę. I to będzie miało sens.
 
-**Łukasz Kałużny**: Zbyt miłe słowo. Mały już nim wymiotuje.
+**Łukasz Kałużny**: Hybryda, już zmiłuj z tym słowem... ja już nim wymiotuję.
 
-**Szymon Warda**: Ale dość dobrze określa to o co chodzi. De facto to i to łączy oba te światy. Nie podejmujemy decyzję, że tylko to, tylko to. No bo wiadomo, że też takie mocy decyzje organizacji. Mało kto ma odwagę podjąć decyzję. A spróbujmy tego trochę tego, trochę tego. I tak mamy 25 różnych systemów, które by to samo. Dokładnie. I na tym się to może skończyć? Jak najbardziej.
+**Szymon Warda**: Ale dobrze... Dobrze określa to o co chodzi. De facto, że to i to. Łączymy obydwa światy. Nie podejmujemy decyzji, że tylko to, tylko to. No bo wiadomo, że też takie mocne decyzje organizacji... Mało kto ma odwagę podjąć - więc wszyscy mówią: A spróbujmy tego, trochę tego, trochę tego. I nagle mamy 25 różnych systemów, które robią to samo dokładnie. I na tym się to może skończyć. Jak najbardziej.
 
 **Łukasz Kałużny**: Dobra, to co? Kończymy?
 
-**Szymon Warda**: Kończymy. Trzymajcie się.
+**Szymon Warda**: Kończymy. Trzymajcie się. Hej!
 
-**Łukasz Kałużny**: Na razie.
+**Łukasz Kałużny**: Na razie. Hej!
 
