--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -7,6 +7,8 @@ episode: "63"
 tags: []
 spreaker: 52824469
 ---
+Co słychać w CNCFie? Jakie projekty zyskały na popularności? Czy będzie ucieczka z cloudu? 
+Dziś o ankiecie od Datadoga i Dynatrace'a... i co możemy z niej wywnioskować! 
 
 
 Linki i ciekawe znaleziska:
