--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -4,7 +4,7 @@ title: '#63 Patoarchitekci Short #19'
 date: 2023-02-24 08:00:00 +0200
 description: 
 episode: "63"
-tags: []
+tags: ["cloud","cncf","ankieta","servicemesh","cassandra","kafka"]
 spreaker: 52824469
 ---
 Co słychać w CNCFie? Jakie projekty zyskały na popularności? Czy będzie ucieczka z cloudu? 
