--- a/_posts/2023-03-03-64.md
+++ b/_posts/2023-03-03-64.md
@@ -11,7 +11,13 @@ spreaker: 53071283
 
 Linki i ciekawe znaleziska:
 
-
+- [Sam Newman - Don't Call It A Platform](https://samnewman.io/blog/2023/02/08/dont-call-it-a-platform/)
+- [What is platform engineering?](https://twitter.com/swardley/status/1618730098164899850)
+- [Serverless Doesn’t Mean DevOpsLess or NoOps](https://thenewstack.io/serverless-doesnt-mean-devopsless-or-noops/)
+- [The 12 Platform Challenges of Christmas](https://www.syntasso.io/post/the-12-platform-challenges-of-christmas)
+- [Containerd Adds Support for a New Container Type: Wasm Containers](https://www.infoq.com/news/2023/02/containerd-wasi/)
+- [google/osv-scanner: Vulnerability scanner](https://github.com/google/osv-scanner)
+- [State of Infrastructure-from-Code 2023 - Klotho](https://klo.dev/state-of-infrastructure-from-code-2023/)
 
 ### Transkrypcja
 
