--- a/_posts/2023-03-03-64.md
+++ b/_posts/2023-03-03-64.md
@@ -4,9 +4,11 @@ title: '#64 Patoarchitekci Short #20'
 date: 2023-03-03 08:00:00 +0200
 description: 
 episode: "64"
-tags: []
+tags: ["devops","platform","engineer","engineering","serverless","google","ocr","infra"]
 spreaker: 53071283
 ---
+Dziś Patoarchitekci o DevOpsie (i DevOpsach...), platform engineeringu, Internal Development Platform...
+a także: cloud isn't dead, oraz o nowej technologii od Google! :D
 
 
 Linki i ciekawe znaleziska:
