--- a/_posts/2023-03-10-65.md
+++ b/_posts/2023-03-10-65.md
@@ -4,9 +4,15 @@ title: '#65 Patoarchitekci Short #21'
 date: 2023-03-10 08:00:00 +0200
 description: 
 episode: "65"
-tags: []
+tags: ["maersk","heycom","autoskalowanie","serviceweaver"]
 spreaker: 11965733
 ---
+Jak zwykle dzieje się dużo:
+Maersk, hey.com a AWS i onprem,
+Microsoft - czy to Serverless czy autoskalowanie?
+a także Google i Service Weaver for Writing Distributed Applications
+
+...i wiele więcej! 
 
 
 Linki i ciekawe znaleziska:
